postgresql-deploy-podman-kube: rename dir, add consul service definition

--- a/TerraformWorkShop/Quadlet/postgresql-infra/podman-postgresql/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/postgresql-infra/podman-postgresql/values-sololab.yaml
@@ -1,6 +1,7 @@
 global:
   imageRegistry: zot.day0.sololab
 postgresql:
+  containerPorts: []
   extraEnvVars:
     - name: TZ
       value: Asia/Shanghai
