--- a/TerraformWorkShop/Quadlet/consul-server/podman-consul/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/consul-server/podman-consul/values-sololab.yaml
@@ -38,6 +38,14 @@ consul:
   ## @param consul.configFiles
   configFiles:
     main:
+      acl:
+        enabled: true
+        default_policy: deny
+        enable_token_persistence: true
+        tokens:
+          initial_management: e95b599e-166e-7d80-08ad-aee76e7ddf19
+          agent: e95b599e-166e-7d80-08ad-aee76e7ddf19
+          config_file_service_registration: e95b599e-166e-7d80-08ad-aee76e7ddf19
       bind_addr: '{{ GetInterfaceIP "eth0" }}'
       ports:
         https: 8501
@@ -58,17 +66,14 @@ consul:
               /consul/hostname: node_name
             claim_assertions:
               - value.node_name == "${node}"
-      acl:
-        enabled: true
-        default_policy: deny
-        enable_token_persistence: true
-        tokens:
-          initial_management: e95b599e-166e-7d80-08ad-aee76e7ddf19
-          agent: e95b599e-166e-7d80-08ad-aee76e7ddf19
-          config_file_service_registration: e95b599e-166e-7d80-08ad-aee76e7ddf19
+      client_addr: "0.0.0.0"
+      datacenter: dc1
       encrypt: aPuGh+5UDskRAbkLaXRzFoSOcSM+5vAK+NEYOWHJH7w=
-      auto_encrypt:
-        allow_tls: true
+      # https://discuss.hashicorp.com/t/failed-to-receive-encryption-is-configured-but-remote-state-is-not-encrypted/41222
+      # encrypt_verify_incoming: true
+      # encrypt_verify_outgoing: false
+      # auto_encrypt:
+      #   allow_tls: true
       tls:
         defaults:
           ca_file: /consul/config/certs/ca.crt
@@ -77,6 +82,7 @@ consul:
           verify_incoming: false
           verify_outgoing: true
         internal_rpc:
+          # verify_incoming: true
           verify_server_hostname: true
   ## @param consul.command Override default container command (useful when using custom images)
   ## ref: https://github.com/hashicorp/consul/blob/v1.20.2/.release/docker/docker-entrypoint.sh#L75
