--- a/TerraformWorkShop/Hyper-V/VM-Day1-FCOS/Butane/network.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-Day1-FCOS/Butane/network.yaml
@@ -2,17 +2,20 @@
 variant: fcos
 version: 1.5.0
 storage:
+  directories:
+    - path: /etc/systemd/resolved.conf.d
   files:
     # config static ip
     # https://docs.fedoraproject.org/en-US/fedora-coreos/sysconfig-network-configuration/#_disabling_automatic_configuration_of_ethernet_devices
-    - path: /etc/NetworkManager/conf.d/noauto.conf
-      mode: 0644
-      contents:
-        inline: |
-          [main]
-          # Do not do automatic (DHCP/SLAAC) configuration on ethernet devices
-          # with no other matching connections.
-          no-auto-default=*
+    # - path: /etc/NetworkManager/conf.d/noauto.conf
+    #   mode: 0600
+    #   contents:
+    #     inline: |
+    #       [main]
+    #       # Do not do automatic (DHCP/SLAAC) configuration on ethernet devices
+    #       # with no other matching connections.
+    #       no-auto-default=*
+    # https://networkmanager.dev/docs/api/latest/settings-connection.html
     - path: /etc/NetworkManager/system-connections/${interface}.nmconnection
       mode: 0600
       contents:
@@ -22,7 +25,18 @@ storage:
           type=ethernet
           interface-name=${interface}
 
+          [ethernet]
+
           [ipv4]
           address1=${ip}/${prefix},${gateway}
-          dns=${dns};
+          dns=${general_dns};
+          may-fail=false
           method=manual
+    # https://wiki.archlinux.org/title/Systemd-resolved#Automatically
+    - path: /etc/systemd/resolved.conf.d/custom.conf
+      mode: 0600
+      contents:
+        inline: |
+          [Resolve]
+          DNS=${domain_dns}
+          Domains=${domain}
