--- a/TerraformWorkShop/Quadlet/grafana/podman-grafana/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/grafana/podman-grafana/values-sololab.yaml
@@ -30,8 +30,8 @@ grafana:
         auth_url: # set from terraform data
         api_url: # set from terraform data
         token_url: # set from terraform data
-        scopes: openid groups username
-        email_attribute_path: username
+        scopes: openid groups user
+        email_attribute_path: email
         empty_scopes: false
         tls_client_ca: /etc/grafana/certs/ca.crt
         # Configure role mapping, oss version grafana only able to use serval builtin roles
@@ -40,6 +40,9 @@ grafana:
         # https://github.com/Lillecarl/nixos/blob/0cd25a6656976b10b9caf49b4dd637d91b5245f5/cloud/grafana-config/oauth.tf#L17
         #
         # GrafanaAdmin means Organization administrator
+        # ref: https://community.grafana.com/t/generic-oauth-cannot-assign-grafanaadmin/110312/2
+        # https://grafana.com/docs/grafana/latest/setup-grafana/configure-security/configure-authentication/generic-oauth/#configuration-options:~:text=mapping%20example.-,allow_assign_grafana_admin,-No
+        allow_assign_grafana_admin: true
         role_attribute_path: contains(groups[*], 'app-grafana-root') && 'GrafanaAdmin' || contains(groups[*], 'app-grafana-admin') && 'Admin' || contains(roles[*], 'app-grafana-editor') && 'Editor' || 'Viewer'
   podLabels:
     traefik.enable: true
