loki-deploy-podman-kube: add loki image, remove container side tls config, add ui config, update ExecStartPost healthcheck method

--- a/TerraformWorkShop/Quadlet/loki/podman-loki/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/loki/podman-loki/values-sololab.yaml
@@ -2,43 +2,35 @@ global:
   imageRegistry: zot.day0.sololab
 loki:
   containerPorts: []
-  configFiles:
-    custom:
-      server:
-        domain: loki.day1.sololab
-        root_url: https://loki.day1.sololab
-        cert_key: /etc/loki/certs/loki.key
-        cert_file: /etc/loki/certs/loki.crt
-        protocol: https
-      auth.generic_oauth:
-        enabled: true
-        name: vault
-        client_id: # set from terraform data
-        client_secret: # set from terraform data
-        auth_url: # set from terraform data
-        api_url: # set from terraform data
-        token_url: # set from terraform data
-        scopes: openid groups user
-        email_attribute_path: email
-        empty_scopes: false
-        tls_client_ca: /etc/loki/certs/ca.crt
-        # Configure role mapping, oss version loki only able to use serval builtin roles
-        # https://loki.com/docs/loki/latest/setup-loki/configure-security/configure-authentication/generic-oauth/#configure-role-mapping
-        # https://github.com/ruby-no-kai/rubykaigi-net/blob/29080e7758903dd7429fbdc60eb5f1ddd4b6a2ed/tf/loki/oidc_client.tf#L17
-        # https://github.com/Lillecarl/nixos/blob/0cd25a6656976b10b9caf49b4dd637d91b5245f5/cloud/loki-config/oauth.tf#L17
-        #
-        # lokiAdmin means Organization administrator
-        # ref: https://community.loki.com/t/generic-oauth-cannot-assign-lokiadmin/110312/2
-        # https://loki.com/docs/loki/latest/setup-loki/configure-security/configure-authentication/generic-oauth/#configuration-options:~:text=mapping%20example.-,allow_assign_loki_admin,-No
-        allow_assign_loki_admin: true
-        role_attribute_path: contains(groups[*], 'app-loki-root') && 'lokiAdmin' || contains(groups[*], 'app-loki-admin') && 'Admin' || contains(roles[*], 'app-loki-editor') && 'Editor' || 'Viewer'
+  config:
+    ## loki cannot handle tls well by itself,
+    ## reason: failed to run local healthcheck if tls configed
+    ## error message: tls: invalid ClientKeyExchange message
+    # server:
+    #   http_tls_config:
+    #     # https://pkg.go.dev/crypto/tls#ClientAuthType
+    #     client_auth_type: VerifyClientCertIfGiven
+    #     client_ca_file: /etc/loki/certs/ca.crt
+    #     cert_file: /etc/loki/certs/loki.crt
+    #     key_file: /etc/loki/certs/loki.key
+    ui:
+      enabled: true
+      node_name: day1
+
+  # tls:
+  #   mountPath: /etc/loki/certs
+  #   contents:
+  #     loki.crt: # set from terraform data
+  #     loki.key: # set from terraform data
   podLabels:
     traefik.enable: true
-    traefik.tcp.routers.loki.entrypoints: webSecure
-    traefik.tcp.routers.loki.rule: HostSNI(`loki.day1.sololab`)
-    traefik.tcp.routers.loki.tls.passthrough: true
-    traefik.tcp.routers.loki.service: loki
-    traefik.tcp.services.loki.loadbalancer.server.port: 3000
+    traefik.http.routers.loki-redirect.entrypoints: web
+    traefik.http.routers.loki-redirect.rule: Host(`loki.day1.sololab`)
+    traefik.http.routers.loki-redirect.middlewares: toHttps@docker
+    traefik.http.routers.loki.entryPoints: webSecure
+    traefik.http.routers.loki.rule: Host(`loki.day1.sololab`)
+    traefik.http.routers.loki.tls.certresolver: internal
+    traefik.http.services.loki.loadbalancer.server.port: 3100
   extraEnvVars:
     - name: TZ
       value: Asia/Shanghai
