--- a/TerraformWorkShop/Quadlet/loki/podman-loki/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/loki/podman-loki/values-sololab.yaml
@@ -26,7 +26,7 @@ loki:
     #     cert_file: /etc/loki/certs/loki.crt
     #     key_file: /etc/loki/certs/loki.key
 
-    ## config storage backend for storing chunks of log data
+    ## @param loki.config.storage_config config storage backend for storing chunks of log data
     ## ref: https://grafana.com/docs/loki/latest/configure/#storage_config
     ## ref: https://grafana.com/docs/loki/latest/operations/storage/tsdb/#single-store-tsdb-tsdb
     ##
@@ -36,23 +36,29 @@ loki:
         cache_location: /var/loki/tsdb-cache
       use_thanos_objstore: true
       object_store:
+        # https://grafana.com/docs/loki/latest/configure/#thanos_object_store_config
         s3:
-          endpoint: https://minio.day1.sololab
-          bucketnames: loki-data
+          # https://github.com/cloudlena/s3manager/issues/7
+          endpoint: minio-api.day1.sololab
+          bucket_name: loki
           access_key_id: # set from terraform data
           secret_access_key: # set from terraform data
-          s3forcepathstyle: true
+          # s3forcepathstyle: true
           http:
             tls_ca_path: /etc/loki/certs/ca.crt
     ui:
       enabled: true
       node_name: day1
 
-  # tls:
-  #   mountPath: /etc/loki/certs
+  tls:
+    mountPath: /etc/loki/certs
   #   contents:
   #     loki.crt: # set from terraform data
   #     loki.key: # set from terraform data
+  hostAliases:
+    - ip: host-gateway
+      hostnames:
+        - minio-api.day1.sololab
   podLabels:
     traefik.enable: true
     traefik.http.routers.loki-redirect.entrypoints: web
