--- a/TerraformWorkShop/Quadlet/traefik-day1/podman-traefik/traefik-traefik.yaml
+++ b/TerraformWorkShop/Quadlet/traefik-day1/podman-traefik/traefik-traefik.yaml
@@ -8,24 +8,24 @@ http:
       basicAuth:
         users:
           - admin:$apr1$/F5ai.wT$7nFJWh4F7ZA0qoY.JZ69l1
-  routers:
-    dashboard-redirect:
-      entryPoints:
-        - web
-      middlewares:
-        - toHttps@file
-        - userPass@file
-      rule: Host(`traefik.day1.sololab`) && (PathPrefix(`/api`)|| PathPrefix(`/dashboard`))
-      service: api@internal
-    dashboard:
-      entryPoints:
-        - webSecure
-      middlewares:
-        - userPass@file
-      rule: Host(`traefik.day1.sololab`) && (PathPrefix(`/api`)|| PathPrefix(`/dashboard`))
-      service: api@internal
-      tls:
-        certresolver: internal
+  # routers:
+  #   dashboard-redirect:
+  #     entryPoints:
+  #       - web
+  #     middlewares:
+  #       - toHttps@file
+  #       - userPass@file
+  #     rule: Host(`traefik.day1.sololab`) && (PathPrefix(`/api`)|| PathPrefix(`/dashboard`))
+  #     service: api@internal
+  #   dashboard:
+  #     entryPoints:
+  #       - webSecure
+  #     middlewares:
+  #       - userPass@file
+  #     rule: Host(`traefik.day1.sololab`) && (PathPrefix(`/api`)|| PathPrefix(`/dashboard`))
+  #     service: api@internal
+  #     tls:
+  #       certresolver: internal
 # tls:
 #   certificates:
 #     - certFile: /etc/traefik/tls/day0.crt
