--- a/TerraformWorkShop/Quadlet/grafana/podman-grafana/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/grafana/podman-grafana/values-sololab.yaml
@@ -39,10 +39,13 @@ grafana:
         # https://github.com/ruby-no-kai/rubykaigi-net/blob/29080e7758903dd7429fbdc60eb5f1ddd4b6a2ed/tf/grafana/oidc_client.tf#L17
         # https://github.com/Lillecarl/nixos/blob/0cd25a6656976b10b9caf49b4dd637d91b5245f5/cloud/grafana-config/oauth.tf#L17
         #
+        # available roles: Viewer, Editor, Admin and GrafanaAdmin
+        # login with GrafanaAdmin need to set below attribute to true
         # GrafanaAdmin means Organization administrator
         # ref: https://community.grafana.com/t/generic-oauth-cannot-assign-grafanaadmin/110312/2
         # https://grafana.com/docs/grafana/latest/setup-grafana/configure-security/configure-authentication/generic-oauth/#configuration-options:~:text=mapping%20example.-,allow_assign_grafana_admin,-No
         allow_assign_grafana_admin: true
+        # ref: https://grafana.com/docs/grafana/latest/administration/roles-and-permissions/#roles-and-permissions
         role_attribute_path: contains(groups[*], 'app-grafana-root') && 'GrafanaAdmin' || contains(groups[*], 'app-grafana-admin') && 'Admin' || contains(roles[*], 'app-grafana-editor') && 'Editor' || 'Viewer'
   podLabels:
     traefik.enable: true
