loki-deploy-podman-kube: enlarge resourcesPreset

--- a/TerraformWorkShop/Quadlet/loki/podman-loki/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/loki/podman-loki/values-sololab.yaml
@@ -2,6 +2,7 @@ global:
   imageRegistry: zot.day0.sololab
 loki:
   containerPorts: []
+  resourcesPreset: "medium"
   config:
     # common:
     #   instance_interface_names:
