traefik-deploy-podman-kube: add readonly attribute for docker.sock

--- a/TerraformWorkShop/Quadlet/traefik-day0/podman-traefik/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/traefik-day0/podman-traefik/values-sololab.yaml
@@ -83,6 +83,7 @@ traefik:
   extraVolumeMounts:
     - name: docker-socket
       mountPath: /var/run/docker.sock
+      readOnly: true
     - name: config-dynamic
       mountPath: /etc/traefik/dynamic
   extraVolumes:
