--- a/TerraformWorkShop/Quadlet/prometheus/podman-prometheus/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/prometheus/podman-prometheus/values-sololab.yaml
@@ -3,17 +3,32 @@ global:
 prometheus:
   containerPorts: []
   resourcesPreset: "small"
-  config:
+  # configFiles:
+  ## @param prometheus.configFiles.web basic authentication and TLS config
+  ## The config file will presents in the path which specify in prometheus.flags.web.config.file, default: /etc/prometheus/web.yml
+  ## ref: https://prometheus.io/docs/prometheus/3.4/configuration/https/
+  ##
+  #   web:
+  #     tls_server_config:
+  #       cert_file: /etc/prometheus/certs/prometheus.crt
+  #       key_file: /etc/prometheus/certs/prometheus.key
+  flags:
+    web:
+      listen-address: 127.0.0.1:9090
+  # hostAliases:
+  #   - ip: host-gateway
+  #     hostnames:
+  #       - day1.node.consul
+  # podLabels:
+  #   traefik.enable: true
+  #   traefik.http.routers.prometheus-redirect.entrypoints: web
+  #   traefik.http.routers.prometheus-redirect.rule: Host(`prometheus.day1.sololab`)
+  #   traefik.http.routers.prometheus-redirect.middlewares: toHttps@file
+  #   traefik.http.routers.prometheus.entryPoints: webSecure
+  #   traefik.http.routers.prometheus.rule: Host(`prometheus.day1.sololab`)
+  #   traefik.http.routers.prometheus.tls.certresolver: internal
+  #   traefik.http.services.prometheus.loadbalancer.server.port: 9090
 
-  podLabels:
-    traefik.enable: true
-    traefik.http.routers.prometheus-redirect.entrypoints: web
-    traefik.http.routers.prometheus-redirect.rule: Host(`prometheus.day1.sololab`)
-    traefik.http.routers.prometheus-redirect.middlewares: toHttps@file
-    traefik.http.routers.prometheus.entryPoints: webSecure
-    traefik.http.routers.prometheus.rule: Host(`prometheus.day1.sololab`)
-    traefik.http.routers.prometheus.tls.certresolver: internal
-    traefik.http.services.prometheus.loadbalancer.server.port: 3100
   extraEnvVars:
     - name: TZ
       value: Asia/Shanghai
