traefik-ops: use http route for most services in day1 host

--- a/TerraformWorkShop/Quadlet/grafana/podman-grafana/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/grafana/podman-grafana/values-sololab.yaml
@@ -49,11 +49,25 @@ grafana:
         role_attribute_path: contains(groups[*], 'app-grafana-root') && 'GrafanaAdmin' || contains(groups[*], 'app-grafana-admin') && 'Admin' || contains(roles[*], 'app-grafana-editor') && 'Editor' || 'Viewer'
   podLabels:
     traefik.enable: true
-    traefik.tcp.routers.grafana.entrypoints: webSecure
-    traefik.tcp.routers.grafana.rule: HostSNI(`grafana.day1.sololab`)
-    traefik.tcp.routers.grafana.tls.passthrough: true
-    traefik.tcp.routers.grafana.service: grafana
-    traefik.tcp.services.grafana.loadbalancer.server.port: 3000
+    traefik.http.routers.grafana-redirect.entrypoints: web
+    traefik.http.routers.grafana-redirect.rule: Host(`grafana.day1.sololab`)
+    traefik.http.routers.grafana-redirect.middlewares: toHttps@file
+    traefik.http.routers.grafana-redirect.service: grafana
+
+    traefik.http.routers.grafana.entrypoints: webSecure
+    traefik.http.routers.grafana.rule: Host(`grafana.day1.sololab`)
+    traefik.http.routers.grafana.tls.certresolver: internal
+    traefik.http.routers.grafana.service: grafana
+
+    traefik.http.services.grafana.loadBalancer.serversTransport: grafana@file
+    traefik.http.services.grafana.loadbalancer.server.scheme: https
+    traefik.http.services.grafana.loadbalancer.server.port: 3000
+
+    # traefik.tcp.routers.grafana.entrypoints: webSecure
+    # traefik.tcp.routers.grafana.rule: HostSNI(`grafana.day1.sololab`)
+    # traefik.tcp.routers.grafana.tls.passthrough: true
+    # traefik.tcp.routers.grafana.service: grafana
+    # traefik.tcp.services.grafana.loadbalancer.server.port: 3000
   extraEnvVars:
     - name: TZ
       value: Asia/Shanghai
