--- a/TerraformWorkShop/Quadlet/minio/podman-minio/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/minio/podman-minio/values-sololab.yaml
@@ -11,36 +11,45 @@ minio:
         - sololab
   podLabels:
     traefik.enable: true
-    traefik.tcp.routers.minio-api.entrypoints: webSecure
-    traefik.tcp.routers.minio-api.rule: HostSNI(`minio-api.day1.sololab`)
-    traefik.tcp.routers.minio-api.tls.passthrough: true
-    traefik.tcp.routers.minio-api.service: minio-api
-    traefik.tcp.services.minio-api.loadbalancer.server.port: 9000
+    # traefik.tcp.routers.minio-api.entrypoints: webSecure
+    # traefik.tcp.routers.minio-api.rule: HostSNI(`minio-api.day1.sololab`)
+    # traefik.tcp.routers.minio-api.tls.passthrough: true
+    # traefik.tcp.routers.minio-api.service: minio-api
+    # traefik.tcp.services.minio-api.loadbalancer.server.port: 9000
 
-    traefik.tcp.routers.minio-console.entrypoints: webSecure
-    traefik.tcp.routers.minio-console.rule: HostSNI(`minio-console.day1.sololab`)
-    traefik.tcp.routers.minio-console.tls.passthrough: true
-    traefik.tcp.routers.minio-console.service: minio-console
-    traefik.tcp.services.minio-console.loadbalancer.server.port: 9001
+    # traefik.tcp.routers.minio-console.entrypoints: webSecure
+    # traefik.tcp.routers.minio-console.rule: HostSNI(`minio-console.day1.sololab`)
+    # traefik.tcp.routers.minio-console.tls.passthrough: true
+    # traefik.tcp.routers.minio-console.service: minio-console
+    # traefik.tcp.services.minio-console.loadbalancer.server.port: 9001
 
-    # traefik.http.routers.minio-api-redirect.entrypoints: web
-    # traefik.http.routers.minio-api-redirect.rule: Host(`minio.day0.sololab`)
-    # traefik.http.routers.minio-api-redirect.middlewares: toHttps@file
-    # traefik.http.routers.minio-api-redirect.service: minio-api
+    traefik.http.routers.minio-api-redirect.entrypoints: web
+    traefik.http.routers.minio-api-redirect.rule: Host(`minio-api.day1.sololab`)
+    traefik.http.routers.minio-api-redirect.middlewares: toHttps@file
+    traefik.http.routers.minio-api-redirect.service: minio-api
 
-    # traefik.http.routers.minio-api.entrypoints: webSecure
-    # traefik.http.routers.minio-api.rule: Host(`minio.day0.sololab`)
-    # traefik.http.routers.minio-api.tls: true
-    # traefik.http.routers.minio-api.service: minio-api
+    traefik.http.routers.minio-api.entrypoints: webSecure
+    traefik.http.routers.minio-api.rule: Host(`minio-api.day1.sololab`)
+    traefik.http.routers.minio-api.tls.certresolver: internal
+    traefik.http.routers.minio-api.service: minio-api
 
-    # traefik.http.services.minio-api.loadBalancer.serversTransport: minio@file
-    # traefik.http.services.minio-api.loadbalancer.server.scheme: https
-    # traefik.http.services.minio-api.loadbalancer.server.port: 9000
+    traefik.http.services.minio-api.loadBalancer.serversTransport: minio-api@file
+    traefik.http.services.minio-api.loadbalancer.server.scheme: https
+    traefik.http.services.minio-api.loadbalancer.server.port: 9000
 
-    # traefik.http.routers.minio-console-redirect.entrypoints: web
-    # traefik.http.routers.minio-console-redirect.rule: Host(`minio.day0.sololab`) && PathPrefix(`/ui`)
-    # traefik.http.routers.minio-console-redirect.service: minio-console
-    # traefik.http.routers.minio-console-redirect.middlewares: toHttps@file
+    traefik.http.routers.minio-console-redirect.entrypoints: web
+    traefik.http.routers.minio-console-redirect.rule: Host(`minio-console.day1.sololab`)
+    traefik.http.routers.minio-console-redirect.service: minio-console
+    traefik.http.routers.minio-console-redirect.middlewares: toHttps@file
+
+    traefik.http.routers.minio-console.entrypoints: webSecure
+    traefik.http.routers.minio-console.rule: Host(`minio-console.day1.sololab`)
+    traefik.http.routers.minio-console.tls.certresolver: internal
+    traefik.http.routers.minio-console.service: minio-console
+
+    traefik.http.services.minio-console.loadBalancer.serversTransport: minio-console@file
+    traefik.http.services.minio-console.loadbalancer.server.scheme: https
+    traefik.http.services.minio-console.loadbalancer.server.port: 9001
 
     # traefik.http.routers.minio-console.entrypoints: webSecure
     # traefik.http.routers.minio-console.rule: Host(`minio.day0.sololab`) && PathPrefix(`/ui`)
